name:                redirecter
version:             0.1
homepage:            https://github.com/andrewthad/redirecter#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2017 Andrew Martin
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable redirecter
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:       
      base
    , wai
    , warp
    , text
    , http-types
    , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrewthad/redirecter
